--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -469,7 +469,7 @@
 					</div>
 
 					<div class="col-sm-6 form-group">
-						<label class="form-label" for="address-zip">ZIP code</label>
+						<label class="form-label" for="address-zip">PIN code</label>
 						<input autocomplete="false" name="zipcode" class="form-control" type="number" id="address-zip"
 							required>
 						<div class="invalid-feedback">Please add your ZIP code!</div>
