--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,14 +57,15 @@
 
                     <div class="col-md-3  p-2 m-2  text-capitalize card border rounded">
                         <a href="/search">
-                            <img class="img-fluid img-thumbnail" src="/uploads/cropped/<%- element.images.image1 %>" alt="<%- element.product_name %>">
+                            <img class="img-fluid img-thumbnail" src="/uploads/cropped/<%- element.images.image1 %>"
+                                alt="<%- element.product_name %>">
                         </a>
-                        
-            
+
+
                         <p class="h4 card-title"><%- element.product_name %></p>
                         <div class="card-body">
-                            <p class="lead card-text"><%- element.sellingPrice %></p>
-                            <p class="lead card-text"><del><%- element.actualPrice %></del></p>
+                            <p class="lead card-text">₹ <%- element.sellingPrice %></p>
+                            <p class="lead card-text"><del>₹ <%- element.actualPrice %></del></p>
 
                         </div>
                         <div class="card-footer justify-content-center">
@@ -80,35 +81,36 @@
 
 
 
-    </section>
+        </section>
 
 
-    <section class="py-6 brands">
-        <div class="container">
-          <% if (categories !== 'undefined') { %>
-          <h4 class="text-uppercase text-center mb-5">Categories</h4>
-          <!-- Brands Slider-->
-          <div class="row">
-            <% categories?.forEach((category, index) => { %>
-            <div class="col-md-4 mb-4">
-              <div class="card border-0">
-                <a href="/shop?category=<%- category._id %>" class="text-decoration-none">
-                  <% if (category.onOffer) { %>
-                  <div class="ribbon ribbon-info">On offer <%- category.offerDiscountRate %>%</div>
-                  <% } %>
-                  <div class="card-body text-center">
-                    <h5 class="card-title text-uppercase mb-3"><%- category.name %></h5>
-                    <p class="card-text">Explore now</p>
-                  </div>
-                </a>
-              </div>
+        <section class="py-6 brands">
+            <div class="container">
+                <% if (categories !=='undefined' ) { %>
+                    <h4 class="text-uppercase text-center mb-5">Categories</h4>
+                    <!-- Brands Slider-->
+                    <div class="row">
+                        <% categories?.forEach((category, index)=> { %>
+                            <div class="col-md-4 mb-4">
+                                <div class="card border-0">
+                                    <a href="/shop?category=<%- category._id %>" class="text-decoration-none">
+                                        <% if (category.onOffer) { %>
+                                            <div class="ribbon ribbon-info">On offer <%- category.offerDiscountRate %>%
+                                            </div>
+                                            <% } %>
+                                                <div class="card-body text-center">
+                                                    <h5 class="card-title text-uppercase mb-3"><%- category.name %></h5>
+                                                    <p class="card-text">Explore now</p>
+                                                </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <% }) %>
+                    </div>
+                    <% } %>
             </div>
-            <% }) %>
-          </div>
-          <% } %>
-        </div>
-      </section>
-      
+        </section>
+
 
 
 
@@ -290,7 +292,7 @@
                 throw new Error(data.message);
             }
             console.log(data);
-            if(data.success){
+            if (data.success) {
 
                 Swal.fire({
                     title: 'Success!',
@@ -298,13 +300,13 @@
                     icon: 'success',
                     confirmButtonText: 'OK'
                 });
-            }else{
+            } else {
                 Swal.fire({
-                title: 'Error!',
-                text: data.message,
-                icon: 'error',
-                confirmButtonText: 'OK'
-            });
+                    title: 'Error!',
+                    text: data.message,
+                    icon: 'error',
+                    confirmButtonText: 'OK'
+                });
             }
         } catch (error) {
             Swal.fire({
