--- a/views/user/invoice-pdf.ejs
+++ b/views/user/invoice-pdf.ejs
@@ -44,7 +44,8 @@
                 </div>
                 <div class="mt-4">
                   <h5 class="font-size-15 mb-1">Order No:</h5>
-                  <p>#<%- order.items.orderID %></p>
+                  <p>#<%= order._id %>
+                  </p>
                 </div>
               </div>
             </div>
@@ -119,8 +120,7 @@
                     <tr>
                       <th scope="row" colspan="4" class="border-0 text-end">Total</th>
                       <td class="border-0 text-end">
-                        <h4 class="m-0 fw-semibold">₹ <%- item.price *
-                          item.quantity %></h4>
+                        <h4 class="m-0 fw-semibold">₹ <%- item.price * item.quantity %></h4>
                       </td>
                     </tr>
                     <!-- end tr -->
@@ -131,7 +131,7 @@
                 <div class="d-print-none mt-4">
                   <div class="float-end">
                     <a href="javascript:window.print()" class="btn btn-success me-1"><i class="fa fa-print"></i></a>
-                    <a href="#" class="btn btn-primary w-md">Send</a>
+
                   </div>
                 </div>
           </div>
